# genealogy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: api-research.md  pre-work.md
src/genealogy/: __init__.py  models.py  parser.py  query.py  timeline.py  validation.py
tests/: conftest.py  test_models.py  test_parser.py  test_query.py  test_timeline.py  test_validation.py
tests/fixtures/: sample_ancestry.ged
