[project]
name = "genealogy"
version = "0.1.0"
description = "Genealogy research automation — GEDCOM processing + FamilySearch API + MCP server"
authors = [
    { email = "tilley_jason@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ged4py>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
